crates/clinker-core/tests/snapshots/combine_test__tests__lookup_baseline_enrichment_standard.snap
---
source: crates/clinker-core/tests/combine_test.rs
expression: canonicalize_csv(standard)
---
f0,f1,f2,f3,order_id,product_code,quantity,product_name,priority
3,PROD-X,1,urgent,3,PROD-X,1,UNKNOWN,urgent
