crates/clinker-core/tests/snapshots/combine_test__tests__lookup_baseline_on_miss_skip.snap
---
source: crates/clinker-core/tests/combine_test.rs
expression: canonicalize_csv(result.primary_output())
---
order_id,product_id,product_name
ORD-1,PROD-A,Widget
ORD-3,PROD-B,Gadget
