crates/clinker-core/tests/snapshots/combine_test__tests__lookup_baseline_order_fulfillment_fulfilled_orders.snap
---
source: crates/clinker-core/tests/combine_test.rs
expression: canonicalize_csv(fulfilled)
---
order_id,order_date,quantity,unit_price,product_code,priority_level,product_name,category,weight_kg
2,2024-01-16,10,15.50,PROD-B,normal,Gadget,electronics,0.3
4,2024-01-18,1,49.99,PROD-A,low,Widget,tools,1.5
